k8s/chainlink/chainlink.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: chainlink-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: cl-sslcert
  backend:
    serviceName: chainlink-svc
    servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: chainlink-svc
spec:
  selector:
    app: chainlink
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6688
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chainlink-deploy
spec:
  selector:
    matchLabels:
      app: chainlink
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chainlink
    spec:
      containers:
        - name: chainlink
          image: smartcontract/chainlink:latest
          args: ["node", "-p", "/secrets/password/password", "-a", "/secrets/api/api"]
          ports:
            - containerPort: 6688
          volumeMounts:
            - name: chainlink-storage
              mountPath: /data
            - name: chainlink-password
              mountPath: /secrets/password
              readOnly: true
            - name: chainlink-api
              mountPath: /secrets/api
              readOnly: true
      volumes:
        - name: chainlink-storage
          persistentVolumeClaim:
            claimName: chainlink-pv-claim
        - name: chainlink-password
          secret:
            secretName: cl-password
        - name: chainlink-api
          secret:
            secretName: cl-api
